prepare_data/work/42/4ccd70c76d945a29d0e513da76518f/.command.err
  File "/home/houcemeddine/BILIM/SWAAT/scripts//parseProteinAnnotation.py", line 97
    anotation_line = re.split( "\s\s+" ,line) 
                                             ^
IndentationError: unindent does not match any outer indentation level
